--- a/package.json
+++ b/package.json
@@ -13,21 +13,18 @@
   "dependencies": {
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.4.0",
-    "dotenv": "^8.2.0",
-    "ffmpeg": "0.0.4",
-    "ffmpeg-static": "^4.2.7",
+    "discord.js-commando": "^0.10.0",
     "ytdl-core": "^4.0.0",
     "opusscript": "^0.0.7",
-    "node-opus": "^0.3.3",
     "ms": "^2.1.2",
-    "fs": "^0.0.2",
+    "fm": "^0.8.0",
+    "node-fetch": "^2.6.1",
     "moment": "^2.29.1",
     "dateformat": "^3.0.3",
     "utf8": "^3.0.0",
-    "discord.js-commando": "^0.10.0",
-    "quick.db": "^7.1.3",
-    "node-fetch": "^2.6.1",
-    "canvacord": "^5.0.7",
-    "hastebin-gen": "^2.0.5"
+    "quick.db": "^7.1.2",
+    "hastebin-gen": "^2.0.5",
+    "canvacord": "^5.0.6",
+    "better-sqlite3": "^7.1.0"
   }
 }
