--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.4.0",
     "discord.js-commando": "^0.10.0",
+    "better-sqlite3": "^7.1.0"
     "ytdl-core": "^4.0.0",
     "opusscript": "^0.0.7",
     "ms": "^2.1.2",
@@ -24,7 +25,6 @@
     "utf8": "^3.0.0",
     "quick.db": "^7.1.2",
     "hastebin-gen": "^2.0.5",
-    "canvacord": "^5.0.6",
-    "better-sqlite3": "^7.1.0"
+    "canvacord": "^5.0.6"
   }
 }
