--- a/package.json
+++ b/package.json
@@ -11,8 +11,9 @@
     "node": "12.x"
   },
   "dependencies": {
-    "@discordjs/opus": "^0.3.2",
     "discord.js": "^12.4.0",
+    "@discordjs/opus": "^0.3.2",
+    "sqlite": "^4.0.14",
     "better-sqlite3": "^7.1.0",
     "ffmpeg": "^0.0.4",
     "ffmpeg-static": "^4.2.7",
